<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddEventActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Event title -->
        <EditText
            android:id="@+id/editTextEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/event_title"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"/>

        <!-- Event Date -->
        <EditText
            android:id="@+id/editTextEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/event_date"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"/>

        <!-- Event Time -->
        <EditText
            android:id="@+id/editTextEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="@string/event_time"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"/>

        <!-- Event Location -->
        <EditText
            android:id="@+id/editTextEventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/event_location"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"/>

        <!-- Event Description -->
        <EditText
            android:id="@+id/editTextEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/event_description"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"/>

        <Button
            android:id="@+id/btnSaveEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_event"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</ScrollView>